lib/flux/apps/web/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/part-of: web
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage
